Some build fixes